[package]
name = "simple-base64-cli"
version = "0.1.1"
edition = "2024"
description = "CLI binary for crate base64"
repository = "https://github.com/ParkSnoopy/base64_cli"
license = "AGPL-3.0-or-later"
keywords = ["cli", "encode", "decode", "base64"]
authors = [
    "ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"
]

[profile.release]
strip = false
lto   = true

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
clio = { version = "0.3", features = ["clap-parse"] }

[[bin]]
name = "b64"
path = "src/main.rs"
